refactor(项目管理): 优化环境组查询项目列表